# monitoring-activity

./: CMakeLists.txt  README.md  client.cpp  server.py
